--- a/ar/test.html
+++ b/ar/test.html
@@ -54,7 +54,7 @@
 <!--			<a-video allset src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
 			
 <!--			<a-video allset src="#video1" width="1" height="1" position=".035 0 0" rotation="-90 0 0"></a-video>-->
-			<a-entity geometry="primitive: circle" material="src: #video1" width="1" height="1"></a-entity>
+			<a-entity allset geometry="primitive: circle" material="src: #video1" width="1" height="1"></a-entity>
 			
 
 <!--			<a-cylinder color="white" radius=".5" height=".1" position="0 0 -.05"></a-cylinder>-->
