--- a/ar/test.html
+++ b/ar/test.html
@@ -8,9 +8,9 @@
 	<style>
 	
 		#loading {
-			background-image: url(loading.gif);
-			background-repeat: no-repeat;
-			background-size: cover;
+			background-image: url(loading.gif), #072021;
+			background-repeat: no-repeat, no-repeat;
+			background-size: contain, contain;
 			
 			position: fixed;
 			height: 100%;
