--- a/ar/test.html
+++ b/ar/test.html
@@ -45,7 +45,7 @@
 <!--			<a-marker type="pattern" url="posardi.patt" smooth="true">-->
 			<a-assets>
 <!--				<img id="posardi-logo" src="posardi-logo-01.png">-->
-				<video id="video1" autoplay loop="true" src="sardo.mp4"></video>
+				<video id="video1" autoplay="true" loop="true" src="sardosquare.3gp" muted="true"></video>
 			</a-assets>
 			
 			<a-marker-camera type="pattern" url="posardi.patt" smooth="true"></a-marker-camera>
@@ -65,7 +65,7 @@
 		</a-scene>
 			
 		
-		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('frank-ocean').play();">Start Video</button>
+		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('video1').play();">Start Video</button>
 		
 		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1</div>
 	</body>
