--- a/ar/test.html
+++ b/ar/test.html
@@ -4,7 +4,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
 	<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.5/aframe/build/aframe-ar.js"></script>
-	<script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>
+<!--	<script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>-->
 	
 	<style>
 	
@@ -67,13 +67,21 @@
 <!--			<a-video allset src="#video1" width="1" height="1" position=".035 0 0" rotation="-90 0 0"></a-video>-->
 			<a-entity
 				allset
-				geometry="primitive: cylinder"
-				multisrc="src4: #video1"
+				geometry="primitive: circle"
+				material="src: #video1"
+				color="white"
+				width="1"
+				height="1"
+				rotation="-90 0 0"
+			></a-entity>
+			
+			<a-cylinder
 				color="white"
 				radius=".5"
-				height="1"
-				rotation="0 0 0"
-			></a-entity>
+				height=".1"
+				open-ended="true"
+				rotation="-90 0 0"
+			></a-cylinder>
 			
 
 <!--			<a-cylinder color="white" radius=".5" height=".1" position="0 0 -.05"></a-cylinder>-->
@@ -86,6 +94,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('video1').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.1</div>
 	</body>
 </html>
