--- a/ar/test.html
+++ b/ar/test.html
@@ -70,8 +70,8 @@
 				geometry="primitive: circle"
 				material="src: #video1"
 				color="white"
-				width="1"
-				height="1"
+				radius=".5"
+				height=".5"
 				rotation="-90 0 0"
 			></a-entity>
 			
@@ -80,7 +80,7 @@
 				radius=".5"
 				height=".1"
 				open-ended="true"
-				rotation="-90 0 0"
+				rotation="0 0 0"
 			></a-cylinder>
 			
 
