--- a/ar/test.html
+++ b/ar/test.html
@@ -70,14 +70,15 @@
 				geometry="primitive: circle"
 				material="src: #video1"
 				color="white"
-				radius=".5"
+				width=".5"
 				height=".5"
 				rotation="-90 0 0"
+			    position="0 0 -.05"
 			></a-entity>
 			
 			<a-cylinder
 				color="white"
-				radius=".5"
+				radius="1"
 				height=".1"
 				open-ended="true"
 				rotation="0 0 0"
@@ -94,6 +95,6 @@
 		
 		<button style="width: 20vw; height: 10vh; position: fixed; bottom: 5vh; right: 10vw; background-color: #342E37; border-style: none; color: #FA824C; font-size: .5em; z-index: 2004" onclick="document.getElementById('video1').play();">Start Video</button>
 		
-		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.1</div>
+		<div style="width: 80vw; height: 10vh; position: fixed; top: 5vh; left: 10vw; border-style: none; color: #FA824C; font-size: 1em; font-family='sans-serif'; text-align: center; z-index: 2004">Version 1.2</div>
 	</body>
 </html>
