--- a/ar/test.html
+++ b/ar/test.html
@@ -73,15 +73,15 @@
 				width=".5"
 				height=".5"
 				rotation="-90 0 0"
-			    position="0 0 -.05"
+			    position="0 0 -1"
 			></a-entity>
 			
 			<a-cylinder
 				color="white"
 				radius="1"
-				height=".1"
+				height="1"
 				open-ended="true"
-				rotation="0 0 0"
+				rotation="0 0 -.5"
 			></a-cylinder>
 			
 
