--- a/ar/test.html
+++ b/ar/test.html
@@ -73,7 +73,7 @@
 				width=".5"
 				height=".5"
 				rotation="-90 0 0"
-			    position="0 0 -1"
+			    position="0 -1 0"
 			></a-entity>
 			
 			<a-cylinder
@@ -81,7 +81,7 @@
 				radius="1"
 				height="1"
 				open-ended="true"
-				rotation="0 -.5 0"
+				rotation="0 0 -.5"
 			></a-cylinder>
 			
 
