--- a/ar/test.html
+++ b/ar/test.html
@@ -55,11 +55,19 @@
 				></video>
 			</a-assets>
 			
+<!--
 			<a-marker-camera
 					type="pattern"
 					url="posardi.patt"
 					smooth="true"
 					></a-marker-camera>
+-->
+			
+				<a-marker-camera
+					type="pattern"
+					preset="hiro"
+					></a-marker-camera>
+			
 			
 <!--			<a-image src="#posardi-logo" width="4" height="1" position=".035 0 -.75" rotation="-90 0 0"></a-image>-->
 <!--			<a-video allset src="#video1" width="4" height="2.25" position=".035 0 1" rotation="-90 0 0"></a-video>-->
