--- a/pangea.html
+++ b/pangea.html
@@ -96,20 +96,19 @@
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>The Answer</h3>
-			<p>Created a brand with a look unlike any other in the city, with soft colors and fun, quippy copy. Our ads are made for the places that college students frequent: spots around campus and around social media.</p>
+			<p>Created a brand with a look unlike any other in the city, with bold colors and fun, quippy copy. Our ads are made for the places that college students frequent: spots around campus and around social media.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>The Results</h3>
-			<p>Grew signups by 300%. Additionally, these executions support the new relaunch of the app, (which you check out <a href='https://itunes.apple.com/us/app/pangea-app/id1278002444?mt=8'>here</a>).</p>
+			<p>Helped college kids get gigs. Also helped Pangea.app become a finalist in MassChallenge Rhode Island 2019.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
 				<div class="carousel-cell"><img src="img/pangea/1.png"></div>
 				<div class="carousel-cell"><img src="img/pangea/2.png"></div>
-				<div class="carousel-cell"><img src="img/pangea/6.png"></div>
-				<div class="carousel-cell"><img src="img/pangea/3.png"></div>
+				<div class="carousel-cell"><img src="img/pangea/3.jpg"></div>
 				<div class="carousel-cell"><img src="img/pangea/4.gif"></div>
-				<div class="carousel-cell"><img src="img/pangea/5.png"></div>
+				<div class="carousel-cell"><img src="img/pangea/5.jpg"></div>
 			</div>
 		</div> </div>
 		<div id="footContainer">
