--- a/ws.html
+++ b/ws.html
@@ -130,7 +130,7 @@
 		<div id="footContainer">
 			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <b>Wienerschnitzel</b> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
 			
-			<div id="friends"><b><b>Sydney Gray</b>&mdash;Writing<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Shane Sukhlal</b>&mdash;Design & Productoin<br><b>Manal Jakhar</b>&mdash;Design & Production</div>
+			<div id="friends"><b><b>Sydney Gray</b>&mdash;Writing<br><b>Lindsay Saiia</b>&mdash;Writing<br><b>Shane Sukhlal</b>&mdash;Design & Production<br><b>Manal Jakhar</b>&mdash;Design & Production</div>
 		</div>
 	</div>
 </body>
