--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 		<a id="ATT" class="tile animsition-link" href="att.html">
 			<div class="hoverTitle">AT&T</div>
 		</a>
+		<a id="upserve" class="tile animsition-link" href="upserve.html">
+			<div class="hoverTitle">Upserve</div>
+		</a>
 		<a id="ws" class="tile animsition-link" href="ws.html">
 			<div class="hoverTitle">Wienerschnitzel</div>
 		</a>
