Mobile Only Link

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
 		<a id="Unicef" class="tile animsition-link" href="unicef">
 			<div class="hoverTitle">UNICEF</div>
 		</a>
-		<div id="tag"><div class="tag">I'm an Advertising major at Johnson & Wales University in Providence, RI. I specialize in UI/UX and Graphic Design.</div>
-		<a href="about.html">More about me &rarr;</a> <a href="contact.html">Get in touch &rarr;</a>
+		<div id="tag">
+			<div class="tag">I'm an Advertising major at Johnson & Wales University in Providence, RI. I specialize in UI/UX and Graphic Design.</div>
+			<a class="mobileOnlyLink animsition-link" href="about.html">More about me &rarr;</a>
+			<a class="mobileOnlyLink animsition-link" href="contact.html">Get in touch &rarr;</a>
 		</div>
 		<a id="OS" class="tile animsition-link" href="os">
 			<div class="hoverTitle">Ocean Spray</div>
