--- a/upserve.html
+++ b/upserve.html
@@ -15,9 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="flickity.css"/>
 	<link rel="stylesheet" type="text/css" href="fullscreen.css"/>
-	
-	<link rel="stylesheet" href="https://cdn.plyr.io/3.5.2/plyr.css" />
-	
+		
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="animsition.min.css">
 	
@@ -26,9 +24,7 @@
 	<script src="js/barba.min.js"></script>
 	<script src="js/flowtype.js"></script>
 	<script src="js/jquery.center.min.js"></script>
-	
-	<script src="https://cdn.plyr.io/3.5.2/plyr.js"></script>
-	
+		
 	<script type="text/javascript" src="js/flickity.pkgd.min.js"></script>
 	<script type="text/javascript" src="js/fullscreen.js"></script>
 	<script src="js/animsition.min.js"></script>
@@ -58,7 +54,6 @@
 			imagesLoaded: true
 		});
 		
-		const player = new Plyr('#player');
 		
 		$(".animsition").animsition({
 			inClass: 'fade-in-up-sm',
@@ -96,34 +91,28 @@
 				<a class="headerContact animsition-link" href="contact.html"><div class="headerText">Contact</div></a>
 			</div>
 		</div>
-		<div id="name">Unplug</div>
-<!--		<div id="link"><a class="link animsition-link" href="http://passdropit.com/CMQZMb9R">Plansbook</a></div>-->
+		<div id="name">Upserve</div>
+		<div id="link"><a class="link animsition-link" href="https://docs.google.com/presentation/d/19G007GgyNS-ryubgNJHJO5E7yLLcwwbHD5JWLGJzOVY/edit?usp=sharing">Deck</a></div>
 		<div id="ask" class="copyBlock">
 			<h3>Ask</h3>
-			<p>Pick a social cause and solve it through the wonders of television & advertising.</p>
+			<p>Build awareness of a startup restaurant POS system among high-end restauranteurs.</p>
 		</div>
 		<div id="answer" class="copyBlock">
 			<h3>Answer</h3>
-			<p>Convince college freshmen to put down the vape and think about their younger siblings.</p>
+			<p>Give busy restaurant owners the tools to get to know who their customers are through the magic of social media.</p>
 		</div>
 		<div id="results" class="copyBlock">
 			<h3>Results</h3>
-			<p>A campaign that uses 3 out of the 5 senses (plus common sense) to end teenage vaping.</p>
+			<p>A campaign that brings knowledge to the table and the back of the house.</p>
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
 				<div class="carousel-cell"><img src="img/unplug/1.png"></div>
-				<div class="carousel-cell"><div class="plyr__video-embed" id="player">
-					<iframe
-						src="https://player.vimeo.com/video/365980515?loop=false&amp;byline=false&amp;portrait=false&amp;title=false&amp;speed=true&amp;transparent=0&amp;gesture=media"
-						allowfullscreen
-						allowtransparency
-						allow="autoplay"></iframe>
-				</div></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/unplug/2.png"></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/unplug/3.png"></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/unplug/4.png"></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/unplug/5.png"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/2.png"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/3.png"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/4.png"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/5.png"></div>
+				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/6.png"></div>
 			</div>
 		</div> </div>
 		<div id="footContainer">
