Major updates plus censorship

--- a/moveout.html
+++ b/moveout.html
@@ -114,7 +114,7 @@
 			</div>
 		</div> </div>
 		<div id="footContainer">
-			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <b>Move Out & Donate</b></div>
+			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="upserve.html">Upserve</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <b>Move Out & Donate</b></div>
 			
 			<div id="friends"><b>Lindsay Saiia</b>&mdash;Writing<br><b>Desiree Dominguez</b>&mdash;Writing</div>
 		</div>
