--- a/upserve.html
+++ b/upserve.html
@@ -107,18 +107,17 @@
 		</div>
 		<div id="showcase"> <div class="showcase">
 			<div class="main-carousel">
-				<div class="carousel-cell"><img src="img/unplug/1.png"></div>
+				<div class="carousel-cell"><img src="img/upserve/1.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/2.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/3.png"></div>
-				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/4.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/5.png"></div>
 				<div class="carousel-cell"><img data-flickity-lazyload-srcset="img/upserve/6.png"></div>
 			</div>
 		</div> </div>
 		<div id="footContainer">
-			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <b>Unplug</b> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
+			<div id="portfolioLinks"><a class="animsition-link" href="pangea.html">Pangea.app</a> | <a class="animsition-link" href="unplug.html">Unplug</a> | <a class="animsition-link" href="att.html">AT&T</a> | <a class="animsition-link" href="dunkin.html">Dunkin'</a> | <a class="animsition-link" href="ws.html">Wienerschnitzel</a> | <b>Upserve</b> | <a class="animsition-link" href="unicef.html">UNICEF</a> | <a class="animsition-link" href="os.html">Ocean Spray</a> | <a class="animsition-link" href="bhddh.html">BHDDH</a> | <a class="animsition-link" href="moveout.html">Move Out & Donate</a></div>
 			
-			<div id="friends"><br><b>Angelica Guzzman</b>&mdash;Strategy<br><b>Madelyn Geissenger</b>&mdash;Strategy</div>
+			<div id="friends"><br><b>Sarah Deflaminio</b>&mdash;Strategy<br><b>Kyra Hospedales</b>&mdash;Research<br><b>Matt Mahoney</b>&mdash;Research<br><b>Mason Johnson</b>&mdash;Assistance<br><b><a href="https://www.humaaans.com/">Humaaans</a></b>&mdash;Illustrations</div>
 		</div>
 	</div>
 </body>
