--- a/about.html
+++ b/about.html
@@ -94,6 +94,6 @@
 			Hi, I'm Andrew, and I like to design stuff. I have an unhealthy love for RGB hex codes, Muji notebooks, and Italian soda from Trader Joe’s. You can usually find me coffee in hand, bbq in stomach, trying to find a place to park that doesn't cost an arm and a leg (without parallel parking).<br><br> 
 			I like to think of myself as a minimalist urbanist&mdash;which is just a fancy way of saying that I don't care how big or small the city I live in is. So I'm happy anywhere from NYC to Providence. But what I like to geek out over the most, is history. Finding out where things come from and how they got there is my jam. 
 		</div>
-		<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of despair.</div>
+		<!--<div id="caption">This headshot was taken at 6 in the morning at a diner in the ever-gritty Port of Providence after an all nighter. Ignore the look of despair.</div>-->
 	</div>
 </body>
