Shit's lookin good

--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
 		gtag('config', 'UA-117438573-1');
 	</script>
 
-	
+
 	<title>Andrew Thompson | Contact</title>
-	
+
 	<link rel="stylesheet" type="text/css" href="main.css">
-	
+
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="animsition.min.css">
 
@@ -33,7 +33,7 @@
 		$(".headerWork").find(".headerText").center({against: '.headerWork'});
 		$(".headerAbout").find(".headerText").center({against: '.headerAbout'});
 		$(".headerContact").find(".headerText").center({against: '.headerContact'});
-		
+
 		$(".animsition").animsition({
 			inClass: 'fade-in-up-sm',
     		outClass: 'fade-out-up-sm',
@@ -76,8 +76,8 @@
 			<li><a class="animsition-link" href="mailto:me@andrewthompson.me?Subject=Hey!">Email</a></li>
 			<li><a class="animsition-link" href="https://www.instagram.com/andrew_thhompson/">Instagram</a></li>
 			<li>1.860.994.2748</li>
-			<li><a class="animsition-link" href="https://www.dropbox.com/s/lvhwlztipm4riur/Andrew%20Thompson%20%E2%80%94%20Resume.pdf?dl=0">Resume</a></li>
+			<li><a class="animsition-link" href="https://www.dropbox.com/s/d9j0pvg5nb6jqc1/Andrew%20Thompson%20Resume%202020.pdf?dl=0">Resume</a></li>
 		</ul></div>
-		
+
 	</div>
 </body>
